--- a/package.json
+++ b/package.json
@@ -1,24 +1,37 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "auuc-website",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Underwater Club website backed by google drive",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Mathew TH <webmaster@unidive.co.nz>",
   "dependencies": {
+    "bulma-helpers": "^0.3.12",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.21.22",
     "gatsby-image": "^2.4.3",
     "gatsby-plugin-manifest": "^2.4.2",
     "gatsby-plugin-offline": "^3.2.1",
+    "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.3.1",
+    "gatsby-plugin-sass": "^2.3.1",
     "gatsby-plugin-sharp": "^2.6.2",
+    "gatsby-remark-images": "^3.3.8",
     "gatsby-source-filesystem": "^2.3.1",
+    "gatsby-source-google-docs": "^2.0.0-beta.9",
+    "gatsby-source-google-spreadsheet": "^2.0.0",
+    "gatsby-transformer-remark": "^2.8.13",
     "gatsby-transformer-sharp": "^2.5.2",
+    "lodash": "^4.17.15",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bulma-components": "^3.3.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "typeface-lato": "0.0.75"
   },
   "devDependencies": {
+    "@hot-loader/react-dom": "^16.13.0",
     "prettier": "2.0.5"
   },
   "keywords": [
@@ -32,13 +45,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "token": "gatsby-source-google-docs-token"
   }
 }
