Implement first cut of payment process

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ GOOGLE_SERVICE_ACCOUNT_EMAIL=
 GOOGLE_SERVICE_ACCOUNT_PRIVATE_KEY=
 GATSBY_URL_SUBMIT_MEMBERSHIP=
 GATSBY_SOURCE_GOOGLE_DOCS_TOKEN=
+GATSBY_STRIPE_API_KEY=
