--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Mathew TH <webmaster@unidive.co.nz>",
   "dependencies": {
+    "@stripe/stripe-js": "^1.8.0",
     "bulma-helpers": "^0.3.12",
     "dotenv": "^8.2.0",
     "gatsby": "^2.24.43",
@@ -28,7 +29,8 @@
     "react-bulma-components": "^3.4.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "typeface-lato": "0.0.75"
+    "typeface-lato": "0.0.75",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@hot-loader/react-dom": "^16.13.0",
