--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "@stripe/stripe-js": "^1.8.0",
     "bulma-helpers": "^0.3.12",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.24.43",
+    "gatsby": "^2.27.1",
     "gatsby-image": "^2.4.3",
     "gatsby-plugin-manifest": "^2.4.23",
+    "gatsby-plugin-netlify": "^2.6.0",
     "gatsby-plugin-offline": "^3.2.1",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.3.1",
