--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
+    "@hookform/resolvers": "^1.1.1",
     "@stripe/stripe-js": "^1.8.0",
     "bulma-helpers": "^0.3.12",
     "dotenv": "^8.2.0",
@@ -34,8 +35,10 @@
     "react-bulma-components": "^3.4.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^6.12.2",
     "typeface-lato": "0.0.75",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "yup": "^0.31.1"
   },
   "devDependencies": {
     "@hot-loader/react-dom": "^16.13.0",
