--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-source-google-docs": "^2.0.0-beta.9",
     "gatsby-source-google-spreadsheet": "^2.0.0",
+    "gatsby-source-stripe": "^3.1.1",
     "gatsby-transformer-remark": "^2.8.28",
     "gatsby-transformer-sharp": "^2.5.13",
     "lodash": "^4.17.15",
