Extract config to ENV vars, add dev var

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# https://drive.google.com/drive/folders/FOLDER_ID
+GOOGLE_DRIVE_DOCS_SOURCE_FOLDER_ID=
+# https://docs.google.com/spreadsheets/d/<sheetId>/edit#gid=0
+GOOGLE_SOURCE_SHEET_ID=
 #See gatsby-source-google-spreadsheet in gatsby-config for service account details
 #can also be combined as JSON in GOOGLE_SERVICE_ACCOUNT_CREDENTIALS
 GOOGLE_SERVICE_ACCOUNT_EMAIL=example@example.iam.gserviceaccount.com
@@ -7,3 +11,5 @@ GATSBY_STRIPE_API_PUBLIC_KEY=
 STRIPE_API_SECRET_KEY=
 #See gatsby-source-google-docs
 GATSBY_SOURCE_GOOGLE_DOCS_TOKEN=use `npm run token`
+#Optional to generate pages from draft folders
+INCLUDE_DRAFT_FOLDER_PAGES=false
