--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sass": "^2.3.1",
-    "gatsby-plugin-sharp": "^2.6.27",
+    "gatsby-plugin-sharp": "^4.0.0",
     "gatsby-remark-images": "^3.3.25",
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-source-google-docs": "^2.0.0-beta.9",
@@ -44,6 +44,9 @@
   "devDependencies": {
     "@hot-loader/react-dom": "^16.13.0",
     "prettier": "2.0.5"
+  },
+  "engines": {
+  "node": ">=18.0.0"
   },
   "keywords": [
     "gatsby"
